WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114628
aria-valuetext is not exposed on OS X.
https://bugs.webkit.org/show_bug.cgi?id=114628
Summary
aria-valuetext is not exposed on OS X.
James Craig
Reported
2013-04-15 10:10:53 PDT
WebKit has support for aria-valuetext, does not expose it on OS X. example test case
https://dvcs.w3.org/hg/pfwg/raw-file/tip/ARIA/1.0/tests/test-files/host-language/input-range-valuetext.htm
Attachments
patch
(7.09 KB, patch)
2013-04-16 10:08 PDT
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-04-15 10:11:29 PDT
<
rdar://problem/13653594
>
chris fleizach
Comment 2
2013-04-15 18:05:25 PDT
we return this as the AXValueDescription when appropriate (like sliders). where are you seeing this not work?
chris fleizach
Comment 3
2013-04-16 10:08:57 PDT
Created
attachment 198341
[details]
patch
chris fleizach
Comment 4
2013-04-16 10:09:20 PDT
Adding Tim to help with review
Tim Horton
Comment 5
2013-04-16 10:29:21 PDT
Comment on
attachment 198341
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=198341&action=review
> Source/WebCore/ChangeLog:9 > + aria-valuetext is only being exposed on ARIA controls. We should allow it > + to work on native controls as well.
One additional sentence about why it wasn't being exposed before would be nice (it's easy to see why by looking at the patch more closely, but the ChangeLog is supposed to help you around that!)
> Source/WebCore/ChangeLog:15 > + (WebCore):
Please clean this up/remove extraneous lines/etc.
> LayoutTests/platform/mac/accessibility/aria-valuetext-on-native-slider.html:17 > +
there's extra space here
chris fleizach
Comment 6
2013-04-16 10:51:18 PDT
http://trac.webkit.org/changeset/148522
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug