AX: aria-valuetext is not exposed on OS X. https://bugs.webkit.org/show_bug.cgi?id=114628

Reviewed by Tim Horton.

Source/WebCore:

aria-valuetext is only being exposed on ARIA controls. That's because there were
checks in place so that ONLY ARIA defined controls would return anything related to valuetext.
We should allow this to work on native controls as well.

Test: platform/mac/accessibility/aria-valuetext-on-native-slider.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::valueDescription):
(WebCore):
(WebCore::AccessibilityNodeObject::valueForRange):
(WebCore::AccessibilityNodeObject::maxValueForRange):
(WebCore::AccessibilityNodeObject::minValueForRange):
* accessibility/AccessibilityNodeObject.h:
(AccessibilityNodeObject):
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isRangeControl):
     Rename isARIAControl to isRangeControl and make it apply to all elements.
* accessibility/AccessibilityObject.h:

LayoutTests:

* platform/mac/accessibility/aria-valuetext-on-native-slider-expected.txt: Added.
* platform/mac/accessibility/aria-valuetext-on-native-slider.html: Added.



Canonical link: https://commits.webkit.org/133059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148522 268f45cc-cd09-0410-ab3c-d52691b4dbfc